# TurboPi

./: .gitignore  CHANGELOG.md  Dockerfile  README.md
docs/: Comparison.md  Denoise-Optimization-Plans.md  Denosing-opt.md  FP8-nvFP4-triton.md  NVIDIA_THOR_TRT_ISSUES.md  ZHIYUAN_ANALYSIS.md  align.md  align_detail.md  attention_weighted_drift_plan.md  cliff_report.md  debug-02.md  debug-03.md  debug-06.md  debug-07.md  debug-08.md  debug-09.md  debug-10-trt-denoise-fix.md  debug-after-trt.md  debug-mix-04.md  debug-mix-05.md  debug.md  denoise-profiling-guide.md  denoise-test-opt.md  full-graph-quantization-design.md  kv-cache-profill-report.md  meeting.md  nvFP4-report-02.md  nvfp4-optimization-results.md  nvfp4-persistent-kernel-research.md  nvfp4_investigation_report.md  phase1_migration_log.md  phase4_ngc_deployment.md  record2.6.md  report-denosing-noiss.md  results_noise_schedule_all.json  thor-fp4-latency-roadmap.md  thor-quantization-analysis.md  thor-triforce-optimization-plan-v2.md  thor-triforce-optimization-plan.md  todo-01.md  (+9 more)
openpi/: .gitignore  Dockerfile.libero_eval  check_cutlass_scale_size.py  debug_scale_values.py  final_validation.py  nvfp4_persistent_mlp.py  nvfp4_triton_optimized.py  phase3_benchmark_results.json  pyproject.toml  setup_tvm.sh  steps_benchmark_results.json  torchao_benchmark.py  torchao_quant_test.py  triton_gemm_test.py  trt_quant_benchmark.py  validate_precision.py  w4a16_triton.py
openpi/attention_viz/: attention_stats.json
openpi/attention_viz_full/: attention_stats.json
openpi/docs/: FIX_REPORT_KV_CACHE_BUG.md  PERFORMANCE_COMPARISON_REPORT.md  baseline_profile.json  baseline_profile_20260212_084918_v1.2.0_baseline.json  debug-10-attention-optimization.md  debug-11-cuda-graph-optimization.md  debug-12-nvidia-comparison.md  full_optimized_profile_20260212_095911_full_optimized_v1.2.0.json  trt-fp8-detailed-performance-breakdown.md
openpi/drift_analysis/: threshold_analysis.json  trajectory_task0_ep0.json  trajectory_task1_ep0.json  trajectory_task2_ep0.json
openpi/kv_fuse_plugin/python/: benchmark_decoder_layer.py  benchmark_kv_cache_access.py  benchmark_kv_pipeline.py  benchmark_prefill.py  kv_fuse.py
openpi/kv_fuse_plugin/src/: fused_qkv_fp4.cu
openpi/nvfp4_packed_plugin/: CMakeLists.txt  README.md
openpi/nvfp4_packed_plugin/python/: nvfp4_packed.py
openpi/nvfp4_packed_plugin/scripts/: prepare_weights.py
openpi/nvfp4_packed_plugin/src/: nvfp4_gemv_optimized.cu  nvfp4_gemv_transposed.cu  nvfp4_gemv_v5.cu  nvfp4_gemv_v9.cu  nvfp4_packed_kernel.cu  nvfp4_packed_plugin.cpp  nvfp4_packed_plugin.h  nvfp4_packed_torch.cu
openpi/nvfp4_packed_plugin/tests/: benchmark_kernel.cu  test_nvfp4_packed.cu
openpi/scripts/: alternative_optimization_check.py  analyze_cutlass_layout.py  analyze_cutlass_scale_indexing.py  analyze_cutlass_scale_layout_v2.py  analyze_denoise_attention.py  analyze_fp8_scale_precision.py  analyze_nsys_gaps.py  analyze_sample_actions.py  analyze_tile_to_shape.py  analyze_weighted_drift.py  benchmark_all_optimizations.py  benchmark_attention_only.py  benchmark_attn_implementation.py  benchmark_baseline.py  benchmark_baseline_compiled.py  benchmark_cuda_graph_final.py  benchmark_flash_attention_denoise.py  benchmark_fp8_native.py  benchmark_full_graph.py  benchmark_full_pipeline_detailed.py  benchmark_gemv_all.py  benchmark_gemv_kernels.py  benchmark_gemv_v5_v8.py  benchmark_kv_cache.py  benchmark_mlp_layers.py  benchmark_nvfp4_vs_bf16.py  benchmark_nvfuser_nvfp4.py  benchmark_ode_solvers.py  benchmark_persistent_kernel.py  benchmark_phase3.py  benchmark_pipeline.py  benchmark_quantized.py  benchmark_quick.py  benchmark_steps_accuracy.py  benchmark_tensorrt.py  benchmark_thor.py  benchmark_transposed.py  benchmark_triton_nvfp4.py  benchmark_trt_e2e.py  benchmark_v6_mlp.py  (+164 more)
openpi/src/openpi/graph_runner/: __init__.py  vlm_graph.py
openpi/src/openpi/inference/: __init__.py  torch_trt_fp8_kv_cache.py  trt_pipeline.py  unified_policy.py  w4a16_backend.py  w4a16_tvm_kv_cache.py
openpi/src/openpi/models/: model.py
openpi/src/openpi/models_pytorch/: analyze_kernel_perf.py  debug_persistent_kernel.py  fp8_triton.py  gemma_config.py  gemma_pytorch.py  nvfp4_18layer_persistent.cu  nvfp4_18layer_persistent_wrapper.py  nvfp4_linear.py  nvfp4_mlp.py  nvfp4_nlayer_persistent.cu  nvfp4_persistent_extension.cpp  nvfp4_predecode_benchmark.py  nvfp4_triton.py  nvfp4_triton_fused_gemv.py  pi0_pytorch.py  preprocessing_pytorch.py  setup_persistent.py  test_persistent_extension.py  test_persistent_kernel.py  test_persistent_v2.py  verify_fp4_decode.py  w4a16_mlp.py  (+3 more)
openpi/tvm_nvfp4_gemm/: nvfp4_gemm_kernel.cu  nvfp4_gemm_torch.cu  nvfp4_gemm_tvm.py
openpi/tvm_trt_plugin/: README.md
openpi/tvm_trt_plugin/nvfp4_gemm/: CMakeLists.txt  CMakeLists_snippet.txt  nvfp4_gemm_kernel.cu  nvfp4_gemm_launcher.cu  nvfp4_gemm_optimized.cu  nvfp4_gemm_packed.cu  nvfp4_gemm_packed_launcher.cu  nvfp4_gemm_packed_plugin.cpp  nvfp4_gemm_packed_plugin.h  nvfp4_gemm_tvm_plugin.h  nvfp4_tvm_plugin.cpp  test_nvfp4_tvm.cu  test_optimized  test_packed  test_packed_plugin  test_packed_plugin.cu
openpi/tvm_trt_plugin/w4a16_gemm/: CMakeLists_snippet.txt  w4a16_gemm_kernel.cu  w4a16_gemm_launcher.cu  w4a16_gemm_tvm_plugin.h
openpi/tvm_trt_plugin/w4a16_mlp/: CMakeLists.txt  test_w4a16_mlp  test_w4a16_mlp.cu  w4a16_down_proj.cu  w4a16_mlp_launcher.cu  w4a16_mlp_plugin.cu  w4a16_mlp_plugin.h  w4a16_packed_gemv.cu
openpi/tvm_trt_plugin/w4a8_gemm/: CMakeLists_snippet.txt  w4a8_gemm_kernel.cu  w4a8_gemm_launcher.cu  w4a8_gemm_tvm_plugin.h
openpi/w4a16_plugin/: CMakeLists.txt  README.md
openpi/w4a16_plugin/src/: w4a16_gemm_kernel.cu  w4a16_gemm_plugin.cpp  w4a16_gemm_plugin.h
openpi/w4a16_plugin/tests/: test_w4a16_gemm.cu
openpi/w4a16_tvm_plugin/: README.md  build_tvm_kernel.py
openpi/w4a16_tvm_plugin/src/: w4a16_trt_plugin.cpp  w4a16_trt_plugin.h
openpi/w4a8_plugin/: CMakeLists.txt  README.md
openpi/w4a8_plugin/src/: w4a8_gemm_kernel.cu  w4a8_gemm_plugin.cpp  w4a8_gemm_plugin.h
openpi/w4a8_plugin/tests/: test_w4a8_gemm.cu
(+94 files in other folders)
